# Hangman

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/: functions.py  hangman.py  words.txt
tests/: test_find_indexes.py  test_get_random_word.py
