[tool.poetry]
name = "Hangman"
version = "0.1.0"
description = ""
authors = ["arsenii555 <arsenij.evdokimov@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"



[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pytest = "^7.4.2"
wemake-python-styleguide = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
